# rust-cli-template

./: LICENSE  README.md
template/: Cargo.toml
template/src/: cli.rs  main.rs
template/src/commands/: command2.rs
