[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
build = "build.rs"
authors = ["{{authors}}"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15.11"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tokio = { version = "1.45.1", features = ["full"] }
tokio-graceful-shutdown = "0.16.0"
miette = "7.6.0"

[build-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
miette = "7.6.0"

[[bin]]
name = "{{application}}"
path = "src/main.rs"